--- a/assets/css/_chat.scss
+++ b/assets/css/_chat.scss
@@ -204,7 +204,7 @@
   display: flex;
   flex-direction: row;
   background-color: #2d2f33;
-  min-height: 180px;
+  height: 184px;
   border-radius: 12px;
   color: white;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
@@ -221,38 +221,94 @@
 .chat-body {
   flex: 1;
   display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 12px;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 14px 12px 5px;
 }
 
 .chat-header {
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  .chat-character-name {
+    display: flex;
+    font-size: 18px;
+    font-weight: 600;
+    margin: 8px 0;
+  }
+  
+  .chat-icons {
+    display: inline-flex;
+    font-size: 14px;
+    color: white;
+    gap: 8px;
+    margin-bottom: 8px;
+    justify-content: space-between;
+    align-items: center;
+    span {
+      display: inline-flex;
+      align-items: center;
+      gap: 4px; // 아이콘과 숫자 간격
+      background: none;
+      border: none;
+      padding: 0;
+      svg {
+        width: 16px;
+        height: 16px;
+        flex-shrink: 0;
+        display: block;
+      }
+    }
+  }
+}
+
+.chat-preview {
+  margin: 0;
+  font-size: 14px;
+  line-height: 1.5;
+  min-height: 4.5em; /* ✅ 두 줄 높이 확보 (1.5em * 2줄) */
+  overflow: hidden;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .chat-buttons {
   display: flex;
-  gap: 6px;
-  padding: 0 0px; /* 좌우 패딩 추가 */
+  padding: 0; /* 좌우 패딩 추가 */
+  margin-top: 3.86px;
+  margin-bottom: 2.7px;
   box-sizing: border-box; /* 패딩 포함 */
+  justify-content: center;
+
+  button {
+    font-size: 13px;
+    padding: 5px 15px;
+    border: none;
+    background-color: #444;
+    color: white;
+    cursor: pointer;
+    white-space: nowrap;
+    
+    &:first-child {
+      border-right: 1px solid #2d2f33;
+      border-top-left-radius: 6px;
+      border-bottom-left-radius: 6px;
+    }
+    &:last-child {
+      border-left: 1px solid #2d2f33;
+      border-top-right-radius: 6px;
+      border-bottom-right-radius: 6px;
+    }
+    &:hover {
+      background-color: $gray-border;
+      transition: background-color 0.2s ease;
+    }
+  }
 }
 
-.chat-buttons button {
-  font-size: 13px;
-  padding: 6px 10px;
-  border-radius: 6px;
-  border: none;
-  background-color: #444;
-  color: white;
-  cursor: pointer;
-  white-space: nowrap;
-}
-
-.chat-buttons button:hover {
-  background-color: #666;
-}
 
 .chat-footer {
   font-size: 12px;
@@ -269,15 +325,6 @@
   border: none;
   color: white;
   border-radius: 6px;
-}
-
-.chat-character-name {
-  font-size: 18px;
-  font-weight: 600;
-}
-
-.chat-preview {
-  margin: 0px;
 }
 
 .chat-main-span {
