--- a/assets/css/_popup.scss
+++ b/assets/css/_popup.scss
@@ -49,7 +49,6 @@
     display: flex;
     font-size: 14px;
     color: #aaa;
-    
     justify-content: space-between;
     align-items: center;
     span {
@@ -201,6 +200,7 @@
     display: block;
     color: white;
     &:hover {
+      transition: color 0.2s ease;
       color: $yellow;
     }
     &:active {
