--- a/templates/pages/chat.plush.html
+++ b/templates/pages/chat.plush.html
@@ -7,11 +7,11 @@
     <%= form({action: "/ai-response", method: "POST", id: "ai-req-form"}) { %>
         <label for="my-name-input" class="hidden">
             <p>이름</p>
-            <%= f.InputTag({ name: "my-name-input", "type": "text", value: user.Name , "id": "my-name-input", "placeholder": "캐릭터에게 내 이름을 알려주세요." }) %>
+            <%= f.InputTag({ name: "my-name-input", "type": "text", value: user.Name , "id": "my-name-input" }) %>
         </label>
         <label for="my-info-input" class="hidden">
             <p>소개</p>
-            <%= f.TextArea({ name: "my-info-input", "id": "my-info-input", "placeholder": "캐릭터에게 나에 대해 알려주세요." }) %>
+            <%= f.TextArea({ name: "my-info-input", "id": "my-info-input" }) %>
         </label>
         <div class="chat-input-row">
         <%= f.TextArea({ name: "chat-input", "id": "chat-input", "class": "chat-form-textarea", "placeholder": "대사를 입력하세요. 예) 안녕! 뭐해?" }) %>
