--- a/assets/css/_chat.scss
+++ b/assets/css/_chat.scss
@@ -195,7 +195,7 @@
   padding: 40px 0;
   .chat-main-header {
     display: block;
-    padding: 24px 0px 0 24px;
+    padding: 24px 0 0 24px;
     h2 {
       font-size: 24px;
       color: white;
