--- a/templates/pages/index.plush.html
+++ b/templates/pages/index.plush.html
@@ -1,9 +1,15 @@
-<div>
-    <h1><%= title %> Page</h1>
-    <%= for (character) in characters { %>
-        <div class="home-character-div" data-character-id="<%= character.ID %>">
-            <img src="/<%= character.CharacterAssets[0] %>" alt="<%= character.CharacterName %>" class="home-character-image">
-            <%= character.CharacterName %>
-        </div>
-    <% } %>
+<div class="home-page-div">
+    <section class="home-main-header">
+        <h2>캐릭터</h2>
+        <!-- 필터, 정렬 넣을 곳 -->
+    </section>
+    <div class="character-div-list">
+        <%= for (character) in characters { %>
+            <div class="home-character-div" data-character-id="<%= character.ID %>">
+                <img src="/<%= character.CharacterAssets[0] %>" alt="<%= character.CharacterName %>" class="home-character-image">
+                <h3><%= character.CharacterName %></h3>
+                <p><%= character.CharacterOnelineInfo %></p>
+            </div>
+        <% } %>
+    </div>
 </div>
