--- a/assets/css/_userpage.scss
+++ b/assets/css/_userpage.scss
@@ -25,7 +25,7 @@
         background-color: #2d2f33;
         display: block;
         margin-top: 25px;
-        padding: 20px;
+        padding: 21px;
         border-radius: 6px;
         width: 100%;
         flex-shrink: 0;
@@ -34,6 +34,9 @@
             display: flex;
             gap: 12px;
             color: white;
+        }
+        p {
+            margin-bottom: 0;
         }
     }
     
